# lawchain_rag

./: .gitignore  README.md  pyproject.toml  rag_cli.py
lib/: create_database.py  ingest_data.py  rag_config.py  rag_pipeline.py
scripts/: smoke_test.py
utils/: search_utils.py
